Bug 140197 - A letter cut off at certain zoom-level
Summary: A letter cut off at certain zoom-level
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.3.0 target:7.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Kerning
  Show dependency treegraph
 
Reported: 2021-02-05 18:58 UTC by Telesto
Modified: 2022-01-17 15:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (110.47 KB, application/vnd.oasis.opendocument.text)
2021-02-05 18:59 UTC, Telesto
Details
Screenshot (363.57 KB, image/jpeg)
2021-02-05 18:59 UTC, Telesto
Details
Bibisect log (3.36 KB, text/plain)
2021-02-05 19:16 UTC, Telesto
Details
see cutted letters - e, p, d (102.65 KB, image/jpeg)
2021-08-10 07:36 UTC, elias estatistics
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-02-05 18:58:47 UTC
Description:
A letter cut off at certain zoom-level

Steps to Reproduce:
1. open the attached file
2. Zoom to 75% (at least on my screen)
3. Notice the 't' of rightmost (yellow marked text area) being barely visible

Actual Results:
Clipped

Expected Results:
Normal rendering


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3ed9bba283a6a67864c0928186e277240be0d9ba
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-02-05 18:59:33 UTC
Created attachment 169510 [details]
Example file
Comment 2 Telesto 2021-02-05 18:59:52 UTC
Created attachment 169511 [details]
Screenshot
Comment 3 Telesto 2021-02-05 19:03:02 UTC
Found in
Version: 7.0.0.0.alpha0+ (x64)
Build ID: fc028b21a7576bd24d930f32e7d00e32e0e58b99
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

Version: 7.0.0.0.alpha0+ (x64)
Build ID: fc028b21a7576bd24d930f32e7d00e32e0e58b99
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

Still OK with
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 4 Telesto 2021-02-05 19:16:52 UTC
Created attachment 169512 [details]
Bibisect log

Bisected to
author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-12-17 15:11:34 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-12-18 10:28:17 +0100
commit 568b820bc2d52c007ee08ad7a3849c94a458115d (patch)
tree ddce0dda7891e3143c229ab9e8574bc0fd52e17d
parent c4abc77f2e29d96ff2025b1bd84fe3f63715e011 (diff)
tdf#119227 fix freeze when copying a large bulleted list
freeze goes from 5 seconds to about 1 second for me

(1) used unordered_map instead of map
(2) don't create temporary SfxItemSet's just to check equality

https://cgit.freedesktop.org/libreoffice/core/commit/?id=568b820bc2d52c007ee08ad7a3849c94a458115d
Comment 5 Telesto 2021-02-05 20:38:17 UTC
@Noel
Not sure if I should you thank you for the uncovering the annoying bug (here and here bug 140161) present for years in a way finally makes sense (especially bug 103322) or argh.. you broke something.. 

author	Michael Stahl <mstahl@redhat.com>	2013-06-15 21:25:27 +0200
committer	Michael Stahl <mstahl@redhat.com>	2013-06-20 00:34:38 +0200
commit 6db39dbd7378351f6476f6db25eb7110c9cfb291 (patch)
tree 0f9321d40740e87e80d8ed05a7c7f474d5310afd
parent e012f326c1c32c053304998a6826cb322f2c7728 (diff)
fdo#52028: sw: let text formatting ignore RSID in automatic styles
A suprising regression from 062eaeffe7cb986255063bb9b0a5f3fb3fc8e34c:
The RSID text attributes that are inserted for every user-inserted text
cause the text formatting (SwAttrIter) to create a lot more text portions,
and the portion breaks make font kerning impossible.

This is the only way i can think of to fix this problem; alternatives that
don't work are splitting the RSID out of the AUTOFMT hint into a separate
one and combining them in the sw UNO wrappers (fails because
SwXAutoStylesEnumerator actually does need to enumerate every AUTOFMT
including RSID), trying to detect and ignore them just in the text
formatting (the SwAttrIter cannot easily/cheaply detect when it's allowed
to skip), and having an internal subdivision inside the AUTOFMT hint (one
subsection for every RSID change) (which does not work because it cannot
ignore RSID-only AUTOFMTs completely).

[and so on]
Comment 6 mulla.tasanim 2021-03-05 17:21:52 UTC
Thank you for reporting the bug. 

I can confirm that bug is present in

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nb-NO (en_US); UI: en-US
Calc: CL

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 761a672d62df1891b9f4f367a499b220ab2b33fa
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 7 Commit Notification 2021-07-06 08:19:04 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/003d65ef1305eefb43315f93bdf10cee787f90f0

tdf#140197 - Letter cut off at certain zoom-level

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2021-07-11 13:33:40 UTC
Telesto has good eyes.

Fixed. Verified in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: eac5977bfc11797eda356560a5e45c51108ef5a1
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Aron Budea 2021-07-11 21:57:48 UTC
Andreas, it looks like a simple change, do you think this could safely be backported to 7.2 and 7.1?
Comment 10 Andreas Heinisch 2021-07-11 22:34:49 UTC
Aaron, I think it could be backported, but the final patch including Michael Stahl's comments is this one: https://gerrit.libreoffice.org/c/core/+/118455
Comment 11 Commit Notification 2021-07-12 18:21:40 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/988acfabb22ec9281c0fe70ed40b574eeceae90b

tdf#140197 - Letter cut off at certain zoom-level

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Telesto 2021-08-10 07:22:31 UTC
*** Bug 143310 has been marked as a duplicate of this bug. ***
Comment 13 elias estatistics 2021-08-10 07:36:35 UTC
Created attachment 174167 [details]
see cutted letters - e, p, d

Still presented in 7.3.0.0.alpha+

It is not affect only t, but e and p.... and maybe other letters too, especially "d".
Comment 14 Telesto 2021-08-10 07:54:48 UTC
(In reply to elias estatistics from comment #13)
> Created attachment 174167 [details]
> see cutted letters - e, p, d
> 
> Still presented in 7.3.0.0.alpha+
> 
> It is not affect only t, but e and p.... and maybe other letters too,
> especially "d".

Hmm, I do see that.. (in my case the p mostly).. also in
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

Should be moved to a fresh ticket..
Comment 15 Andreas Heinisch 2021-08-10 09:39:24 UTC
In the example file, it cuts away the highlighted p. It does not happen when there is no higlight of the text. I think it should be moved to a new ticket, since imho it does depend only on the highlighted text.