tdf#140197 - Letter cut off at certain zoom-level

regression from
	commit 4b2d4f3c4a68361a6bc03c9ab110ce9376b14b20
	tdf#119227 fix freeze when copying a large bulleted list

Change-Id: Ib69af488fcd30553b4aa4fd3f4b35b5a08d67adc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118455
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>